--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: default
       <p class="description">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, eveniet, reprehenderit enim, optio voluptatum iusto odio dicta repellendus, voluptatibus nemo dolores odit corporis molestias facilis earum esse vitae impedit tempora?
       </p>
-      <a href="#">Read More</a>
+      <a href="#" class="read-more">Read More</a>
     </div><!--/details-->
   </div><!--/featured-event-->
   <div class="single-event">
