calendar system styling done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@ layout: default
 <div class="events">
   <h2>Upcoming Events</h2>
   <div class="featured-event">
+  <div class="image">
     <img src="http://placehold.it/600x337" alt="">
+  </div><!--/image-->
     <div class="details">
       <h4><a href="#">Awesome Event Name</a></h4>
       <p class="date"><strong>Date:</strong> Saturday, December 1</p>
