--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@ layout: default
   {{site.data.header[0].Opening_Paragraph | markdownify }}
   <a href="#visit" class="cta button large">Plan A Visit</a>
   <ul class="menu">
-    <li><a href="#"><i class="fa fa-calendar"></i> View Upcoming Events</a></li>
-    <li><a href="#"><i class="fa fa-user"></i> Meet Our Pastor</a></li>
-    <li><a href="#"><i class="fa fa-envelope"></i> Get In Touch</a></li>
+  {% if site.data.events[0].Event_Title %}
+    <li><a href="#"><i class="fa fa-calendar"></i> View Upcoming Events</a></li>{% endif %}
+    <li><a href="#pastor"><i class="fa fa-user"></i> Meet Our Pastor</a></li>
+    <li><a href="#contact"><i class="fa fa-envelope"></i> Get In Touch</a></li>
   </ul>
 </div><!--/header-->
 <div class="intro">
@@ -60,10 +61,10 @@ layout: default
     </div><!--/visit-sections-->
 </div><!--/visit-->
 <div class="map" id="canvas1">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3296.0975536346546!2d-78.7288047!3d34.297058!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89aa8b75613e4561%3A0x2667399805bc6ed5!2s2012+S+Madison+St%2C+Whiteville%2C+NC+28472!5e0!3m2!1sen!2sus!4v1473851530405" width="100%" height="420px" frameborder="0" style="border:0" allowfullscreen id="map_canvas1"></iframe>
+       {{site.data.visit2[0].Map_Embed}}
 </div><!--/map-->
 <div class="pastor">
-  <h2>Meet Our Pastor</h2>
+  <h2 id="pastor">Meet Our Pastor</h2>
   <img src="{{ site.data.pastor[0].Image[0].url }}" alt="">
   {{ site.data.pastor[0].Text | markdownify }}
   <ul class="pastor-contact">
@@ -71,6 +72,7 @@ layout: default
     <li class="phone"> {{ site.data.pastor[0].Phone }} </li>
   </ul>
 </div><!--/pastor-->
+{% if site.data.events[0].Event_Title %}
 <div class="events">
   <h2>Upcoming Events</h2>
 
@@ -108,6 +110,7 @@ layout: default
   </div><!--/single-event-->
   {% endfor %}
 </div><!--/events-->
+{% endif %}
 <div class="photos">
   <div class="photos-inner" id="sqr-gallery">
   {% for img in site.data.images[0].Images  limit: 12 %}
@@ -116,6 +119,13 @@ layout: default
   </div><!--/photos-inner-->
 </div><!--/gallery-->
 <div class="contact">
-  <h2>Contact Us</h2>
-
+  <h2 id="contact">Contact Us</h2>
+  <p>{{site.data.contact[0].Church_Name}}<br>
+  {{site.data.contact[0].Street}}<br>
+  {{site.data.contact[0].City}}, {{site.data.contact[0].State}} {{site.data.contact[0].Zip}} 
+  </p>
+  <p>{{site.data.contact[0].Church_Phone}} <br>
+    {{site.data.contact[0].Church_Email}}
+  </p>
+ 
 </div><!--/contact-->
